--- a/abstract.tex
+++ b/abstract.tex
@@ -32,11 +32,9 @@
     the model space, instead of the vote simply passing or failing, in order to
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
-    Finally, we attempt to determine how many proxies a voter should be allowed
-    to delegate for an individual vote in order to increase the accuracy of the system
-    as compared to proxy voting with a single proxy.
-    \vicki{Need to make it clear we are talking about a single vote being divided
-    between multiple proxies.}
+    Finally, we attempt to determine how many proxies a voter should be allowed to
+    divide their vote between in order to increase the accuracy of the system as
+    compared to proxy voting with a single proxy.
     % TODO: Put in a bit of what we discover
 
 
