Clarified Congress voting model

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -19,11 +19,11 @@ to continue operating while still allowing members to quarantine and prevent the
 spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for future use
 of proxy voting in other such emergencies.
 The type of proxy voting in Congress is not the traditional type of proxy vote.
-Instead, it is more similar to voting remotely, similar to how one might attend a
-meeting via video conference.
-\vicki{If this is the model, there is less reason to pick a proxy.  They can  just vote remotely.}
+Instead, it is more similar to voting remotely, as quarantining members need to
+meet via video conference and the delegated proxy is required vote exactly as
+directed on behalf of their delegators.
 Nevertheless, using proxy voting in such an important part of the legislative process
-reignites the discussion on the effectiveness of proxy voting.
+reignites the discussion on the effectiveness of traditional proxy voting.
 Does proxy voting introduce too much error into the voting process?
 Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
