Clarified where error comes from

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -23,13 +23,15 @@ Instead, it is more similar to voting remotely, as quarantining members need to
 meet via video conference and the delegated proxy is required vote exactly as
 directed on behalf of their delegators.
 Nevertheless, using proxy voting in such an important part of the legislative process
-reignites the discussion on the effectiveness of traditional proxy voting.
+reignites the discussion on the effectiveness of traditional proxy voting where the
+proxy is able to vote on behalf of their delegators as the proxy desires.
+The proxy being able to vote as they desire simplifies the voting process, but
+creates error in that information about the delegators' preferences is lost.
 Does proxy voting introduce too much error into the voting process?
 Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
 can be used to mitigate that effect while still maintaining the benefits of proxy
 voting.
-\vicki{The reader isn't sure where the error is coming from as voting remotely seems to be the same as being there.  Explain.}
 This study attempts to answer these questions by analyzing the effects of proxy
 voting on the results of a vote under a number of preference distributions.
 We employ several voting mechanisms and rank them according to their performance when
