Explained voting power

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -57,10 +57,12 @@ techniques to improve such a system.
 
 
 \section{Background}\label{sec:background}
-\vicki{Explain that initially each player gets one vote.  Explain the term voting power.}
+In a vote, each voter starts with one vote.
+This vote can be called the voter's \textit{weight} or \textit{voting power}.
+The more weight a voter has, the more they can swing the vote in their favor.
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy} or a \textit{delegate}.
-This adds to the voting power of the proxy, which is called its `weight.'
+This adds to the voting power of the proxy, increasing its weight.
 By delegating a proxy, the transferring agent, also known as the \textit{delegator},
 loses their ability to directly vote, instead allowing the proxy to affect it on
 their behalf.
