Removed accuracy from metrics

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -94,9 +94,8 @@ voters, or agents, pass their voting power to the proxy that is closest in the
 preference space.
 
 The `goodness' of a system here is measured using two primary metrics: the
-\textit{accuracy} or \textit{error} of the system, meaning how close the system is to
-the optimal solution, and the total system \textit{welfare}.
-\vicki{You appear to be saying that accuracy and error are the same, but they seem opposite.}
+\textit{error} of the system, meaning how close the system is to the optimal
+solution, and the total system \textit{welfare}.
 Welfare is a measure of how good a situation or action is for an agent.
 For example, an agent not being required to vote in person increases that agent's
 welfare since it makes it easier for the agent to vote.
