--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -477,16 +477,17 @@ House of Representatives.
 As such, we will explore the effects of proxy voting on a finite population of this
 size, as well as explore other possible voting mechanisms.
 
-This study will additionally look at voting mechanisms and attempt to determine which
-mechanism is best suited for proxy voting.
-|vicki{Lead with what others have done. Then in a sentence or two say why yours will differ.}
-This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
-on a single-winner election vote and determined a ranking for these mechanisms.
+
+Anurita~Mathur~and~Arnab~Bhattacharyya~\cite{Mathur2017} looked at several voting
+mechanisms applied on a single-winner election vote and determined a ranking for
+these mechanisms.
 In their work, they discover that the Schulze
 \vicki{Briefly explain these voting mechanisms} and Minimax voting mechanisms always
-agree and beat all other mechanisms tested, while Borda beats 
+agree and beat all other mechanisms tested, while Borda beats
 \vicki{Quantify "beats"} Copeland and Plurality,
 and Plurality comes in last.
+This study will also look at voting mechanisms and attempt to determine which
+mechanism is best suited for proxy voting.
 Our work will differ significantly from theirs, however, as we will explore voting
 mechanisms used under proxy voting instead of single-winner elections
 \vicki{Why does proxy have to differ from single-winner?}, and most of
