Clarifications on our differences from Mathur

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -489,11 +489,11 @@ and Plurality comes in last.
 This study will also look at voting mechanisms and attempt to determine which
 mechanism is best suited for proxy voting.
 Our work will differ significantly from theirs, however, as we will explore voting
-mechanisms used under proxy voting instead of single-winner elections
-\vicki{Why does proxy have to differ from single-winner?}, and most of
-our mechanisms will be different due the mechanisms they used not being beneficial on
-a continuous preference space or with a small number of candidates, or not working well
-with proxy voting.
+mechanisms used in a continuous voting space instead of discrete-space, single-winner
+elections.
+Additionally, most of our mechanisms will be different due the mechanisms they used
+not being beneficial on a continuous preference space or with a small number of
+candidates, or not working well with proxy voting.
 
 Jonas Degrave~\cite{Degrave2014} implemented a simple model to allow voters to
 delegate to multiple proxies.
