--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -481,6 +481,8 @@ size, as well as explore other possible voting mechanisms.
 Anurita~Mathur~and~Arnab~Bhattacharyya~\cite{Mathur2017} looked at several voting
 mechanisms applied on a single-winner election vote and determined a ranking for
 these mechanisms.
+They apply these mechanisms on a dataset while looking only at datapoints without a
+Condorcet winner.
 In their work, they discover that the Schulze
 \vicki{Briefly explain these voting mechanisms} and Minimax voting mechanisms always
 agree and beat all other mechanisms tested, while Borda beats
