--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -483,10 +483,11 @@ mechanisms applied on a single-winner election vote and determined a ranking for
 these mechanisms.
 They apply these mechanisms on a dataset while looking only at datapoints without a
 Condorcet winner.
-In their work, they discover that the Schulze
+In their work, they say a mechanism `beats' another if it has a larger fraction of
+the population prefer its output over the other's output.
+They discover that the Schulze
 \vicki{Briefly explain these voting mechanisms} and Minimax voting mechanisms always
-agree and beat all other mechanisms tested, while Borda beats
-\vicki{Quantify "beats"} Copeland and Plurality,
+agree and beat all other mechanisms tested, while Borda beats Copeland and Plurality,
 and Plurality comes in last.
 This study will also look at voting mechanisms and attempt to determine which
 mechanism is best suited for proxy voting.
