--- a/references/research.bib
+++ b/references/research.bib
@@ -249,6 +249,32 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   year      = {1998},
 }
 
+@Article{Rivest2010,
+  author  = {Rivest, Ronald and Shen, Emily},
+  title   = {An Optimal Single-Winner Preferential Voting System Based on Game Theory},
+  url     = {https://www.stat.uchicago.edu/~lekheng/meetings/mathofranking/ref/rivest.pdf},
+  journal = {Proc. of the 3rd Intl. Workshop on Computational Social Choice (COMSOC)},
+  month   = {08},
+  year    = {2010},
+}
+
+@Article{Schulze2011,
+  author    = {Markus Schulze},
+  title     = {A new monotonic, clone-independent, reversal symmetric, and condorcet-consistent single-winner election method},
+  issn      = {01761714, 1432217X},
+  number    = {2},
+  pages     = {267--303},
+  url       = {http://www.jstor.org/stable/41108129},
+  urldate   = {2022-12-14},
+  volume    = {36},
+  abstract  = {In recent years, the Pirate Party of Sweden, the Wikimedia Foundation, the Debian project, the "Software in the Public Interest" project, the Gentoo project, and many other private organizations adopted a new single-winner election method for internal elections and referendums. In this article, we will introduce this method, demonstrate that it satisfies, e.g., resolvability, Condorcet, Pareto, reversal symmetry, monotonicity, and independence of clones and present an O(Ĉ3) algorithm to calculate the winner, where C is the number of alternatives.},
+  journal   = {Social Choice and Welfare},
+  publisher = {Springer},
+  year      = {2011},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
+
+@Comment{jabref-meta: fileDirectoryLatex-micha-TheMikeste1:D:\\Projects\\Thesis-Experiments\\Report;}
