Clarified multiple proxies question

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -516,12 +516,9 @@ be the same as if the voter had simply not voted.
 However, if the voter were to only delegate a single proxy, the result might not be
 as ideal to the delegator or system as if they had been able to delegate to two proxies
 that would produce a better result.
-As such, we ask, if voters can delegate more than one proxy, how many proxies should
-be allotted before more proxies cease to be useful?
-\vicki{Are we assuming equal weight?  If not, two delegates would be sufficient as you can get any point in between by proper weighting.
-%
-One concern is that if we allow multiple proxies, but they have to be of equal weight, it gets complicated for the delegator to figure out.
-}  
+As such, we ask, if voters need to delegate more than one proxy with equal weighting and
+will always select those closest to them, how many proxies should be allotted before
+more proxies cease to be useful?
 
 % TODO: Shotgun more previous work here
 James Fearon~\cite{Fearon1998} described how cooperation often occurs in two phases:
