Fixed(?) awkward sentence

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -547,11 +547,10 @@ allow more negotiation, thereby facilitating deliberation.
 This study will explore how proxy voting affects the vote.
 We will look at the difference in outcome between a direct vote using all agents that
 can vote in person, and proxy voting where the agents that can not attend in person
-will delegate a proxy from who can.
-\vicki{Previous sentence is awkward}
-Votes will take place in a metric space, where an agent is able to vote anywhere
-inside the interval $[-1, 1]$, and will be aggregated using a voting mechanism inside
-the same space.
+instead delegate a proxy.
+Votes will take place in a continuous metric space, where an agent is able to vote
+anywhere inside the interval $[-1, 1]$, and will be aggregated using a voting
+mechanism inside the same space.
 Direct voting will use the mean mechanism to aggregate votes, since the average of
 all preferences will be the point most equidistant from all voters' preferences in
 the metric space, thereby minimizing the distance between all voters' preferences and
