--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -534,8 +534,6 @@ If enough agents vote towards the center, the bargaining phase can be restarted 
 allow more negotiation, thereby facilitating deliberation.
 
 
-
-
 \section{Proposed Work}\label{sec:contribution}
 % \vicki{
 %     Try to be more specific about what you will do.
@@ -589,11 +587,14 @@ We will start with the base case of one proxy per delegator, then extending to t
 proxies per delegator, then three, and so on until more proxies is either detrimental
 to system accuracy or not possible.
 
-Whereas voting on an interval is uncommon and finding a \vicki{real world} dataset using preferences
-on an interval does not seem possible, these investigations will be performed using
-preferences generated from several statistical distributions.
+Whereas voting on an interval is uncommon and finding a real world dataset using
+preferences on an interval currently does not seem possible, these investigations
+will be performed using preferences generated from several statistical distributions.
 These distributions and their notations are listed in \autoref{tab:distributions-used}.
-\vicki{Do we have any data to indicate that these data sets are representative? Would a bi-modal function be appropriate?}
+These various distributions will allow the data gathered to represent situations
+where the majority of voters are at either extreme (\betadistribution{0.3}{0.3}),
+skewed towards one side (\betadistribution{4}{1}), or mostly indifferent
+(\gaussiandist\ and \betadistribution{50}{50}).
 Each experiment will have a population of 435, representing the number of members in
 the House of Representatives.
 For each round, we will experiment with 1 to 434 delegating agents and examine how
@@ -603,11 +604,17 @@ error correlates with the number of delegators.
     % increase table row spacing, adjust to taste
     \renewcommand{\arraystretch}{1.3}
 
-    \caption{The distributions to be used to generate preferences.}
+    \caption{
+        The distributions to be used to generate preferences.
+        Note how each distribution represents a unique population type.
+        Additionally, any skewed distributions can be inverted to create a
+        distribution that is skewed in the other direction (e.g. a distribution
+        skewed in favor can be inverted to create a distribution skewed against).
+    }
     \label{tab:distributions-used}
 
     \centering
-    \input{content/figures/chapter1/distributions-used.tex}
+    \input{content/figures/chapter1/distributions-used}
 \end{table}
 
 % TODO: Fill out synopsis of what is learned after the data is analysed
