Clarification on inverting distributions

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -609,7 +609,8 @@ error correlates with the number of delegators.
         Note how each distribution represents a unique population type.
         Additionally, any skewed distributions can be inverted to create a
         distribution that is skewed in the other direction (e.g. a distribution
-        skewed in favor can be inverted to create a distribution skewed against).
+        skewed in favor can be inverted to create a flipped distribution skewed
+        against).
     }
     \label{tab:distributions-used}
 
