Clarified Weight by Ranked Choice

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -290,9 +290,17 @@ These mechanisms include
     \item Weight by Instant Runoff, where the weight of an active voter is determined by
     its ranking after Instant Runoff using the number of voters using it as a proxy.
     \vicki{Instant Runoff needs to be defined.}
-    \item Weight by Ranked Choice, where the weight of an active voter is determined by
-    its overall ranking against all other voters.
-    \vicki{unclear.  Typically means the ability to list several choices in order.  Not appropriate on a meetric space.}
+    \item {
+        Weight by Ranked Choice, where the weight of an active voter is determined by
+        its overall ranking against all other voters.
+        In other words, the system ranks each active voter according to its total
+        delegator-assigned weight.
+        Each active voter is then assigned a new weight from 1 to $n$ according to its
+        ranking, where $n$ is the number of active voters.
+        This means the active voter in first will receive a system weight of $n$,
+        regardless of its total delegator weight, and the active voter in last will
+        receive a system weight of 1.
+    }
     \item Weight by Weighted Instant Runoff, where the weight of an active voter is
     determined by its ranking after Instant Runoff using the voter weights instead of
     the number of voters using it as a proxy.
