Update on Overleaf.

--- a/abstract.tex
+++ b/abstract.tex
@@ -12,8 +12,8 @@
     a proxy or a delegate, to vote on their behalf.
     As with other voting systems, the votes are then aggregated into a final result
     using a voting rule or mechanism.
-    Ideally, the result of proxy voting would be the same, or as close to as
-    possible, to the result if everyone were to vote.
+    Ideally, the result of proxy voting would be the same as, or as close as
+    possible to, the result if everyone were to vote.
     The type of proxy voting used in Congress differs from the traditional
     definition of proxy voting in that proxies are required to vote as directed, and
     was designed to reduce the transmission of disease such as COVID-19.
@@ -29,7 +29,7 @@
     under a number of preference distributions.
     We additionally explore how different voting rules affect the results of the vote.
     We employ an opinion space model and determine the result of a vote as a point in
-    the model space, instead of the vote simply passing or failing, in order to
+    the model's space, instead of the vote simply passing or failing, in order to
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
     Finally, we attempt to determine how many proxies a voter should be allowed to
